{{$NEXT}}

- Use MetaCPAN to look up reverse dependencies instead of CPANDB. (doy)

- Silence all of the test running and installing. (doy)

- Avoid dying on avoidable errors (turn them into test fails or skips as
  appropriate). (doy)

- Use Test::Builder instead of Test::More so $TODO works properly. (doy)

- test_module now also initializes the log files. (doy)

0.12   2011-07-20

- Forcibly reload the CPAN index each time this module runs tests. This gives
  you the best chance of finding the most reecent version of a dependent
  module.

- Logging was broken when using multiple processes. The prereq log file would
  end up appearing under multiple names (potentially one per process), and the
  files were not locked for writing in each process.

- The directory to which prereqs were installed got cleaned out after each
  process exited when running multiple processes, which often cause false
  failures for modules being tested.


0.10   2011-04-21

- Test output now includes the distribution id rather than just a module name,
  meaning you can see the distro version in the ok line.


0.09   2011-04-12

- Parallel testing caused bad test output when a test was skipped because a
  module could not be found on CPAN.

- The output from running a distro's Makefile.PL/Build.PL could stomp on the
  TAP output when running tests in parallel. We now simply close STDOUT when
  running this step, which is less than ideal, but fixes the breakage.


0.08   2011-04-12

- This module can now run tests in parallel if you have Parallel::ForkManager
  installed. See the docs for details.

- The test_module() sub has been deprecated in favor a new sub,
  test_modules(). If you use test_module(), you can't ever run tests in
  parallel.

- We now defer loading CPAN.pm and related modules until tests are
  running. This avoids the possibility of CPAN prompting for config if
  Test::DependentModules is loaded but not actually used.


0.07   2010-07-15
